# H5X

./: .gitignore  ACTUAL_RESULTS.md  CMakeLists.txt  IMPLEMENTATION_COMPLETION_SUMMARY.md  LICENSE  README.md  README_backup.md  WEB_INTERFACE_GUIDE.md  blockchain_demo  build.py  build.sh  demo_fallback  final_test  integration_test.sh  judge_demo.cpp  level2_test  level2_test_report.html  level2_test_report.json  level2_test_report_summary.txt  start_web_dashboard.sh  test_ir_fix
archive/: README.md
blockchain/: README.md  deploy.sh  package-lock.json  package.json  truffle-config.js
blockchain/contracts/: H5XHashStorage.sol  Migrations.sol
blockchain/migrations/: 1_initial_migration.js  2_deploy_contracts.js
blockchain/test/: H5XHashStorage.test.js
cmake/: H5XConfig.cmake.in
config/: config.json
demos/: comprehensive_demo.cpp  demo_program.cpp  financial_security_demo.cpp  test_program.cpp
docs/: api.md  configuration.md
output/obfuscated/: .gitkeep  ai_test  blockchain_test
output/reports/: .gitkeep  ai_test_report.html  ai_test_report.json  ai_test_report_summary.txt  blockchain_test_report.html  blockchain_test_report.json  blockchain_test_report_summary.txt
src/ai/: GeneticOptimizer.cpp  GeneticOptimizer.hpp
src/blockchain/: BlockchainVerifier.cpp  BlockchainVerifier.hpp
src/passes/: AntiAnalysisPass.cpp  AntiAnalysisPass.hpp  BogusControlFlow.cpp  BogusControlFlow.hpp  ControlFlowFlattening.cpp  ControlFlowFlattening.hpp  H5XObfuscationPass.hpp  InstructionSubstitution.cpp  InstructionSubstitution.hpp  StringObfuscation.cpp  StringObfuscation.hpp
src/utils/: ConfigParser.cpp  ConfigParser.hpp  FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp
test-outputs/: README.md
test-outputs/binaries/: blockchain_demo  demo_fallback  demo_gui_test  final_test  financial_monitored  level2_test  monitored_demo  test_ir_fix
test-outputs/reports/: blockchain_demo_report.html  blockchain_demo_report.json  blockchain_demo_report_summary.txt  demo_fallback_report.html  demo_fallback_report.json  demo_fallback_report_summary.txt  demo_gui_test_report.html  demo_gui_test_report.json  demo_gui_test_report_summary.txt  final_test_report.html  final_test_report.json  final_test_report_summary.txt  financial_monitored_report.html  financial_monitored_report.json  financial_monitored_report_summary.txt  level2_test_report.html  level2_test_report.json  level2_test_report_summary.txt  monitored_demo_report.html  monitored_demo_report.json  monitored_demo_report_summary.txt  test_ir_fix_report.html  test_ir_fix_report.json  test_ir_fix_report_summary.txt
tests/: CMakeLists.txt  test_ai.cpp  test_blockchain.cpp  test_obfuscation_engine.cpp  test_passes.cpp  test_utils.cpp
tools/h5x-cli/: main.cpp
tools/h5x-dashboard/: README.md  app.py  app_old.py  requirements.txt
tools/h5x-dashboard/static/css/: style.css
tools/h5x-dashboard/static/js/: dashboard.js
tools/h5x-dashboard/templates/: index.html
